--- a/layout6.css
+++ b/layout6.css
@@ -1,166 +1,214 @@
 body {
-    height: 100vh;
-    display: grid;
-    grid-template-areas: 
+  height: 100vh;
+  display: grid;
+  grid-template-areas:
     'nav header'
     'nav main'
     'nav footer';
-    grid-template-columns: 150px;
-    grid-template-rows: 150px 1fr 150px;
+  grid-template-columns: 150px;
+  grid-template-rows: 150px 1fr 150px;
 }
 
 nav {
-    grid-area: nav;
-    background-color: plum;
-    display: grid;
-    place-items: center;
+  grid-area: nav;
+  background-color: plum;
+  display: grid;
+  place-items: center;
 }
 
-.nav1{
-    height: 100px;
-    width: 100px;
-    background-color: red;
+.nav1 {
+  height: 100px;
+  width: 100px;
+  background-color: red;
 }
 
-.nav2{
-    height: 100px;
-    width: 100px;
-    background-color: red;
+.nav2 {
+  height: 100px;
+  width: 100px;
+  background-color: red;
 }
 
-.nav3{
-    height: 100px;
-    width: 100px;
-    background-color: red;
+.nav3 {
+  height: 100px;
+  width: 100px;
+  background-color: red;
 }
 
-.nav4{
-    height: 100px;
-    width: 100px;
-    background-color: red;
+.nav4 {
+  height: 100px;
+  width: 100px;
+  background-color: red;
 }
-
 
 header {
-    grid-area: header;
-    background-color: powderblue;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  grid-area: header;
+  background-color: powderblue;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .header1 {
-    height: 100px;
-    width: 100px;
-    background-color: red;
+  height: 100px;
+  width: 100px;
+  background-color: red;
 }
 
 .header2 {
-    height: 100px;
-    width: 100px;
-    background-color: red;
+  height: 100px;
+  width: 100px;
+  background-color: red;
 }
 
 .header3 {
-    height: 100px;
-    width: 100px;
-    background-color: red;
+  height: 100px;
+  width: 100px;
+  background-color: red;
 }
-
 
 main {
-    grid-area: main;
-    background-color: purple;
-    display: grid;
-    grid-template-areas: 
-    'article aside' 
+  grid-area: main;
+  background-color: purple;
+  display: grid;
+  grid-template-areas:
+    'article aside'
     'article aside';
-    grid-template-columns: 1fr 150px;
-    grid-template-rows: 2fr 1fr;
-    
+  grid-template-columns: 1fr 150px;
+  grid-template-rows: 2fr 1fr;
 }
-
-
 
 .article {
-    background-color:steelblue;
-    grid-area: article;
-    display: grid;
-    place-items: center;
-    grid-template-areas: 
-    'linhaArticle1' 
-    'linhaArticle2'
-    'linhaArticle3';
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+  background-color: steelblue;
+  grid-area: article;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10%;
+  padding-top: 8%;
 }
 
-.linhaArticle1{
-    grid-area: linhaArticle1;
-
+.linhaArticle1 {
+  width: 600px;
+  height: 100px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.linhaArticle2{
-    grid-area: linhaArticle2;
-
+.class1 {
+  height: 100px;
+  width: 100px;
+  background-color: red;
 }
 
+.class2 {
+  height: 100px;
+  width: 100px;
+  background-color: red;
+}
+
+.class3 {
+  height: 100px;
+  width: 100px;
+  background-color: red;
+}
+
+.linhaArticle2 {
+  width: 600px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.class4 {
+  height: 100px;
+  width: 100px;
+  background-color: red;
+}
+
+.class5 {
+  height: 100px;
+  width: 100px;
+  background-color: red;
+}
+
+.class6 {
+  height: 100px;
+  width: 100px;
+  background-color: red;
+}
 
 .linhaArticle3 {
-    grid-area: linhaArticle3;
-
-
+  width: 600px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
+.class7 {
+  height: 100px;
+  width: 100px;
+  background-color: red;
+}
+
+.class8 {
+  height: 100px;
+  width: 100px;
+  background-color: red;
+}
+
+.class9 {
+  height: 100px;
+  width: 100px;
+  background-color: red;
+}
+
+.nomeMain {
+  font-size: 2rem;
+}
 
 .aside {
-    background-color: springgreen;
-    grid-area: aside;
-    display: flex;
-    display: grid;
-    place-items: center;
-
+  background-color: springgreen;
+  grid-area: aside;
+  display: flex;
+  display: grid;
+  place-items: center;
 }
 
-.aside1{
-    height: 100px;
-    width: 100px;
-    background-color: red;
-
+.aside1 {
+  height: 100px;
+  width: 100px;
+  background-color: red;
 }
 
-.aside2{
-    height: 100px;
-    width: 100px;
-    background-color: red;
-
+.aside2 {
+  height: 100px;
+  width: 100px;
+  background-color: red;
 }
 
-.aside3{
-    height: 100px;
-    width: 100px;
-    background-color: red;
-
+.aside3 {
+  height: 100px;
+  width: 100px;
+  background-color: red;
 }
 
-.aside4{
-    height: 100px;
-    width: 100px;
-    background-color: red;
-
+.aside4 {
+  height: 100px;
+  width: 100px;
+  background-color: red;
 }
 
-footer{
-    grid-area: footer;
-    background-color: salmon;
-    display: grid;
-    place-items: center;
-
+footer {
+  grid-area: footer;
+  background-color: salmon;
+  display: grid;
+  place-items: center;
 }
 
-.footer1{
-    height: 100px;
-    width: 100px;
-    background-color: red;
+.footer1 {
+  height: 100px;
+  width: 100px;
+  background-color: red;
 }
-
